Initial commit for deployment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hemanth Kumar - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@300&display=swap" rel="stylesheet">
 
 
@@ -38,7 +39,7 @@
         </div>
     </div>
     <div class="hero-image">
-        <img src="./images/hero-image.png" alt="Hemanth Kumar">
+        <img src="./images/hero-image.webp" alt="Hemanth Kumar">
     </div>
 </section>
 
